--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -2,4 +2,27 @@
 
 {% block content%}
 {{block.super}}
+<div class="container">
+  {% for  news_item in news %}
+  <div class="row">
+    <div class="col-xs col-sm-8 col-md-8 col-lg-8">
+      <h2 class="text-center">{{news_item.title}}</h2>
+      <h2 class="text-center">{{news_item.post}}</h2>
+    </div>
+    
+    <div class="col-xs-4 col-sm-4 col-lg-4">
+      {%if news_item.article_image %}
+          <img src="{{news_item.article_image.url}}" class="img-responsive" alt="image" width="300px" height="200px">
+      {%endif%}
+    </div>
+
+
+    </div>
+    <hr>
+    {%empty%}
+    <div class="row">
+      <h2 class="text-center"> There are no  News Items</h2>
+    </div>
+    {% endfor %}
+  </div>
 {% endblock%}
